<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ui.product.ProductFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textSize="@dimen/product_heading_textSize"
            android:textAllCaps="true"
            android:textFontWeight="700"
            android:textColor="@color/colorPrimaryDark50"
            android:text="@string/brand"
            android:id="@+id/brandLabel_textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/brandLabel_textView"
            android:textSize="@dimen/product_details_textSize"
            android:textColor="@color/colorPrimaryDark"
            android:text="Lily’s Ankle Boots"
            android:id="@+id/brand_textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/product_heading_textSize"
            android:textAllCaps="true"
            android:textFontWeight="700"
            android:textColor="@color/colorPrimaryDark50"
            android:text="@string/material"
            android:id="@+id/materialLabel_textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/materialLabel_textView"
            android:textSize="@dimen/product_details_textSize"
            android:textColor="@color/colorPrimaryDark"
            android:text="Faux Sued, Velvet"
            android:id="@+id/material_textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/brand_textView"
            android:layout_marginTop="@dimen/product_details_lable_marginTop"
            android:textSize="@dimen/product_heading_textSize"
            android:textAllCaps="true"
            android:textFontWeight="700"
            android:textColor="@color/colorPrimaryDark50"
            android:text="@string/picture"
            android:id="@+id/pictureLabel_textView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/pictureLabel_textView"
            android:textSize="@dimen/product_details_textSize"
            android:textColor="@color/colorPrimaryDark"
            android:text="Waves"
            android:id="@+id/picture_textView"/>

</RelativeLayout>